--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,3 @@
-/**
-* Template Name: DevFolio - v4.8.1
-* Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -20,6 +13,10 @@ h4,
 h5,
 h6 {
   color: #1e1e1e;
+}
+
+.LocationH4 {
+  font-size: 12px;
 }
 
 a {
@@ -473,6 +470,7 @@ a:hover {
   letter-spacing: 1px;
 }
 
+
 #header .logo a {
   color: #fff;
 }
@@ -481,10 +479,16 @@ a:hover {
   max-height: 40px;
 }
 
+/* .logos {
+  filter: grayscale(100%);
+} */
+
 #header.header-scrolled {
   background: rgba(0, 0, 0, 0.9);
   padding: 12px 0;
 }
+
+
 
 /*--------------------------------------------------------------
 # Navigation Menu
@@ -675,6 +679,7 @@ a:hover {
 }
 
 .hero .hero-title {
+  /* color: #cdd1f8; */
   color: #fff;
   font-weight: 600;
   font-size: 3rem;
