--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,7 @@ a:hover {
 
 .box-shadow,
 .card-Portfolio,
+.card-Certificate
 .Resume-box,
 .service-box,
 .paralax-mf {
@@ -1062,7 +1063,7 @@ a:hover {
 
 /* Title of the card */
 .title {
-  color: rgb(0, 123, 255);
+  color: rgb(100 156 215);  
   position: relative;
 }
 
@@ -1075,7 +1076,7 @@ a:hover {
   background: white;
   border-radius: 999px;
   left: -39px;
-  border: 3px solid rgb(0, 72, 255);
+  border: 3px solid rgb(44, 46, 51);
   /* font-family: "Helvetica Neue", Helvetica, Arial, sans-serif */
 }
 
@@ -1185,8 +1186,8 @@ a:hover {
 
 .card-img img:hover {
   opacity: 0.7;
+  max-width: 100%;
 }
-
 
 @media (min-width: 768px) {
   .testimonial-box .description {
@@ -1266,7 +1267,7 @@ a:hover {
 # Portfolio
 --------------------------------------------------------------*/
 @media (min-width: 767px) {
-  .card-Portfolio {
+  .card-Portfolio, .card-Certificate {
     margin-bottom: 3rem;
   }
 }
